# document-generator-webapp

./: .coveragerc  .env.dev  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  Readme.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
docs/source/: api.rst  architecture.rst  code_documentation.rst  conf.py  index.rst  installation.rst  usage.rst
documentapp/: api.py  config.py  document_processor.py  forms.py  image_utils.py  jobs.py  logging_config.py  models.py  ocr_predictor.py  urls.py  views.py
documentapp/migrations/: 0001_initial.py  0002_rename_item_document.py  0003_document_image.py  0004_boxcoordinate.py  0005_boxcoordinate_name.py  0006_boxcoordinate_is_alphabetic_boxcoordinate_is_numeric_and_more.py  0007_rename_boxcoordinate_box.py  0008_rename_x1_box_end_x_rename_x2_box_end_y_and_more.py  0009_rename_mean_lenght_box_mean_length_and_more.py  0010_remove_box_end_x_remove_box_end_y_remove_box_start_x_and_more.py  0011_sampledocument_samplebox.py  0012_samplebox_template_box.py  0013_alter_sampledocument_template_document.py
documentapp/static/documentapp/: style.css
documentapp/static/documentapp/css/: boxes.css  buttons.css  globals.css  headers.css  lists.css  splitted_screen.css  style.css
documentapp/static/documentapp/js/: document_detail.js  document_list.js  jobs.js
documentapp/templates/documentapp/: add_document.html  confirm_delete.html  document_detail.html  document_list.html  document_prediction.html  sample_document_list.html
documentapp/tests/: test_document_processor.py  test_jobs.py  test_ocr_predictor.py
mysite/: settings.py  urls.py
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html
